--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "require": {
         "php": ">=7.1",
-        "multisafepay/magento2-core": "^2.0",
+        "multisafepay/magento2-core": ">=2.2.1",
         "magento/framework": "103.0.*",
         "magento/module-sales": "103.0.*",
         "magento/module-payment": "100.4.*",
