--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
     "require": {
         "php": ">=7.1",
         "multisafepay/magento2-core": ">=2.2.1",
+        "multisafepay/magento2-frontend": ">=1.3.1",
+        "multisafepay/magento2-adminhtml": ">=1.3.1",
         "magento/framework": "103.0.*",
         "magento/module-sales": "103.0.*",
         "magento/module-payment": "100.4.*",
