--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "version": "1.1.1",
     "require": {
         "php": ">=7.1",
-        "multisafepay/magento2-core": ">=2.2.1",
+        "multisafepay/magento2-core": "^2.6",
         "multisafepay/magento2-frontend": ">=1.3.1",
         "multisafepay/magento2-adminhtml": ">=1.3.1",
         "magento/framework": "103.0.*",
