--- a/.github/workflows/extdn-static-tests.yml
+++ b/.github/workflows/extdn-static-tests.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: extdn/github-actions-m2/magento-mess-detector@master
       - uses: extdn/github-actions-m2/magento-coding-standard@master
         with:
             phpcs_standard: phpcs.xml
