--- a/.github/workflows/magento-integration-tests.yml
+++ b/.github/workflows/magento-integration-tests.yml
@@ -44,7 +44,7 @@ jobs:
         with:
             path: ${{ steps.composer-cache.outputs.dir }}
             key: ${{ runner.os }}-composer
-      - name: M2 Integration Tests on 2.4.2
+      - name: M2 Integration Tests on 2.4.3-p1
         uses: MultiSafepay/github-actions-m2/magento-integration-tests/7.4@master
         env:
             MAGENTO_MARKETPLACE_USERNAME: ${{ secrets.MAGENTO_MARKETPLACE_USERNAME }}
@@ -53,6 +53,6 @@ jobs:
         with:
             module_name: MultiSafepay_ConnectGraphQl
             composer_name: multisafepay/magento2-graphql
-            ce_version: '2.4.2'
+            ce_version: '2.4.3-p1'
             magento_pre_install_script: .github/workflows/magento-integration-tests-pre-install.sh
             magento_post_install_script: .github/workflows/magento-integration-tests-post-install.sh
