--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "version": "3.2.0",
     "require": {
         "php": ">=7.1",
-        "multisafepay/magento2-core": "^2.21",
-        "multisafepay/magento2-frontend": "^1.19",
+        "multisafepay/magento2-core": "^2.21 | ^3.0",
+        "multisafepay/magento2-frontend": "^1.19 |^2.0",
         "multisafepay/magento2-adminhtml": "^1.22",
         "magento/framework": "103.0.*",
         "magento/module-sales": "103.0.*",
